leaf text overflow fix

--- a/app/assets/stylesheets/components/_card.scss
+++ b/app/assets/stylesheets/components/_card.scss
@@ -3,7 +3,7 @@
   background: white;
   box-shadow: 0 0 15px rgba(0,0,0,0.2);
   margin-bottom: 40px;
-  min-width: 200px;
+  max-width: 100%;
 }
 
 .card:hover {
